[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/ui/TeamStatsPanel.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/ShotMapCanvas.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ui/PlayerRatingsPanel.gd" id="3"]
[ext_resource type="Script" path="res://scripts/screens/PostMatchStatisticsScreen.gd" id="4"]
[ext_resource type="Script" path="res://scripts/ui/analytics/AdvancedAnalyticsPanel.gd" id="5"]
[ext_resource type="Script" path="res://scripts/ui/analytics/HeatMapCanvas.gd" id="6"]
[ext_resource type="Script" path="res://scripts/ui/analytics/PassMapCanvas.gd" id="7"]
[ext_resource type="Script" path="res://scripts/ui/TimelineCanvas.gd" id="8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxHeader"]
bg_color = Color(0.2, 0.2, 0.35, 1)
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxPanel"]
bg_color = Color(0.15, 0.15, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.5, 1)

[node name="PostMatchStatisticsScreen" type="Control"]
script = ExtResource("4")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.102, 0.102, 0.180, 1)

[node name="Header" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxHeader")

[node name="HeaderContent" type="MarginContainer" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="Header/HeaderContent"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MatchInfo" type="HBoxContainer" parent="Header/HeaderContent/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HomeTeamLabel" type="Label" parent="Header/HeaderContent/VBoxContainer/MatchInfo"]
layout_mode = 2
text = "홈 팀"

[node name="VSLabel" type="Label" parent="Header/HeaderContent/VBoxContainer/MatchInfo"]
layout_mode = 2
text = " vs "

[node name="AwayTeamLabel" type="Label" parent="Header/HeaderContent/VBoxContainer/MatchInfo"]
layout_mode = 2
text = "원정 팀"

[node name="ScoreDisplay" type="HBoxContainer" parent="Header/HeaderContent/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HomeScoreLabel" type="Label" parent="Header/HeaderContent/VBoxContainer/ScoreDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"

[node name="SeparatorLabel" type="Label" parent="Header/HeaderContent/VBoxContainer/ScoreDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = " - "

[node name="AwayScoreLabel" type="Label" parent="Header/HeaderContent/VBoxContainer/ScoreDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
offset_bottom = -100.0
scroll_horizontal_enabled = false

[node name="ContentContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
custom_minimum_size = Vector2(1080, 0)
theme_override_constants/separation = 20

[node name="TeamStatsPanel" type="Panel" parent="ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxPanel")
script = ExtResource("1")

[node name="TitleBar" type="HBoxContainer" parent="ScrollContainer/ContentContainer/TeamStatsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="ScrollContainer/ContentContainer/TeamStatsPanel/TitleBar"]
layout_mode = 2
text = "팀 통계"
theme_override_font_sizes/font_size = 24

[node name="StatsGrid" type="VBoxContainer" parent="ScrollContainer/ContentContainer/TeamStatsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ShotMapPanel" type="Panel" parent="ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 650)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxPanel")

[node name="TitleBar" type="HBoxContainer" parent="ScrollContainer/ContentContainer/ShotMapPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="ScrollContainer/ContentContainer/ShotMapPanel/TitleBar"]
layout_mode = 2
text = "슛 맵"
theme_override_font_sizes/font_size = 24

[node name="ShotMapCanvas" type="Control" parent="ScrollContainer/ContentContainer/ShotMapPanel"]
layout_mode = 2
custom_minimum_size = Vector2(1000, 600)
mouse_filter = 1
script = ExtResource("2")

[node name="PlayerRatingsPanel" type="Panel" parent="ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxPanel")
script = ExtResource("3")

[node name="TitleBar" type="HBoxContainer" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel/TitleBar"]
layout_mode = 2
text = "선수 평점"
theme_override_font_sizes/font_size = 24
size_flags_horizontal = 3

[node name="TeamTabs" type="HBoxContainer" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel/TitleBar"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HomeTabButton" type="Button" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel/TitleBar/TeamTabs"]
layout_mode = 2
text = "홈"
tooltip_text = "홈팀 선수 평점 보기"

[node name="AwayTabButton" type="Button" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel/TitleBar/TeamTabs"]
layout_mode = 2
text = "원정"
tooltip_text = "원정팀 선수 평점 보기"

[node name="PlayerList" type="ScrollContainer" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="PlayerRows" type="VBoxContainer" parent="ScrollContainer/ContentContainer/PlayerRatingsPanel/PlayerList"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AdvancedAnalyticsPanel" type="Panel" parent="ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 650)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxPanel")
script = ExtResource("5")

[node name="PanelContent" type="VBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Header" type="HBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/Header"]
layout_mode = 2
text = "고급 분석"
theme_override_font_sizes/font_size = 24

[node name="AdvancedTabs" type="TabContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent"]
layout_mode = 2

[node name="HeatMapTab" type="VBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayerSelector" type="OptionButton" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab"]
layout_mode = 2
tooltip_text = "선수를 선택해 히트맵을 확인합니다"

[node name="LegendContainer" type="HBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MinLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab/LegendContainer"]
layout_mode = 2
text = "-"

[node name="LegendBar" type="TextureRect" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab/LegendContainer"]
layout_mode = 2
custom_minimum_size = Vector2(240, 16)
stretch_mode = 3

[node name="MaxLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab/LegendContainer"]
layout_mode = 2
text = "-"

[node name="HeatMapCanvas" type="Control" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab"]
layout_mode = 2
custom_minimum_size = Vector2(1000, 600)
mouse_filter = 1
script = ExtResource("6")

[node name="HeatEmptyLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/HeatMapTab"]
layout_mode = 2
text = "히트맵을 표시할 데이터가 없습니다"
visible = false

[node name="PassMapTab" type="VBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TeamSelector" type="HBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HomeButton" type="Button" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/TeamSelector"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "홈"
tooltip_text = "홈팀 패스 네트워크 보기"

[node name="AwayButton" type="Button" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/TeamSelector"]
layout_mode = 2
toggle_mode = true
text = "원정"
tooltip_text = "원정팀 패스 네트워크 보기"

[node name="PassMapCanvas" type="Control" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab"]
layout_mode = 2
custom_minimum_size = Vector2(1000, 600)
mouse_filter = 1
script = ExtResource("7")

[node name="PassEmptyLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab"]
layout_mode = 2
text = "패스 데이터를 찾을 수 없습니다"
visible = false

[node name="PassSummaryGrid" type="GridContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab"]
layout_mode = 2
columns = 2
theme_override_constants/v_separation = 4
theme_override_constants/h_separation = 16

[node name="TotalLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/PassSummaryGrid"]
layout_mode = 2
text = "총 패스"

[node name="TotalValue" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/PassSummaryGrid"]
layout_mode = 2
text = "-"

[node name="SuccessLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/PassSummaryGrid"]
layout_mode = 2
text = "성공률"

[node name="SuccessValue" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/PassSummaryGrid"]
layout_mode = 2
text = "-"

[node name="LongestLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/PassSummaryGrid"]
layout_mode = 2
text = "최장 성공 패스"

[node name="LongestValue" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/PassMapTab/PassSummaryGrid"]
layout_mode = 2
text = "-"

[node name="DSA" type="VBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DSASeriesSelector" type="OptionButton" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/DSA"]
layout_mode = 2
text = "All"

[node name="TimelineCanvas" type="Control" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/DSA"]
layout_mode = 2
custom_minimum_size = Vector2(1000, 160)
mouse_filter = 1
script = ExtResource("8")

[node name="DSAEmptyLabel" type="Label" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/DSA"]
layout_mode = 2
text = "DSA 타임라인 데이터를 찾을 수 없습니다"
visible = false

[node name="AdvancedStatsTab" type="VBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StatsContainer" type="VBoxContainer" parent="ScrollContainer/ContentContainer/AdvancedAnalyticsPanel/PanelContent/AdvancedTabs/AdvancedStatsTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MyPlayerSummaryPanel" type="Panel" parent="ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxPanel")

[node name="TitleBar" type="HBoxContainer" parent="ScrollContainer/ContentContainer/MyPlayerSummaryPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="ScrollContainer/ContentContainer/MyPlayerSummaryPanel/TitleBar"]
layout_mode = 2
text = "오늘의 경기 요약"
theme_override_font_sizes/font_size = 24

[node name="MVPLabel" type="Label" parent="ScrollContainer/ContentContainer/MyPlayerSummaryPanel/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
text = ""

[node name="MyPlayerRatingLabel" type="Label" parent="ScrollContainer/ContentContainer/MyPlayerSummaryPanel/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
text = ""

[node name="MyPlayerXPLabel" type="Label" parent="ScrollContainer/ContentContainer/MyPlayerSummaryPanel/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
text = ""

[node name="MyPlayerHeatMapCanvas" type="Control" parent="ScrollContainer/ContentContainer/MyPlayerSummaryPanel"]
layout_mode = 2
custom_minimum_size = Vector2(800, 320)
mouse_filter = 1
script = ExtResource("6")

[node name="ContinueButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
theme_override_font_sizes/font_size = 24
text = "계속하기"
tooltip_text = "홈 화면으로 돌아가기"
